--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,12 @@ kafka-streaming/target/
 kafka-streaming/lib_managed/
 kafka-streaming/src_managed/
 kafka-streaming/project/boot/
+kafka-streaming/project/target/
 kafka-streaming/project/plugins/project/
 kafka-streaming/.history
 kafka-streaming/.cache
 kafka-streaming/.lib/
+kafka-streaming/.idea/
 
 ### Scala ###
 *.class
