Added Dash dashboard. Removing server info

--- a/SparkStreamingJob/src/main/resources/application.properties
+++ b/SparkStreamingJob/src/main/resources/application.properties
@@ -3,7 +3,5 @@ dev.data.host = localhost
 dev.data.port = 9999
 dev.bootstrap.servers = localhost:9092
 
-prod.execution.mode = spark://ec2-52-43-47-6.us-west-2.compute.amazonaws.com:7077
-prod.data.host = ec2-52-43-47-6.us-west-2.compute.amazonaws.com
 prod.data.port = 9999
-prod.bootstrap.servers = ec2-44-231-132-49.us-west-2.compute.amazonaws.com:9092,ec2-54-203-158-66.us-west-2.compute.amazonaws.com:9092,ec2-44-231-71-133.us-west-2.compute.amazonaws.com:9092,ec2-52-89-36-136.us-west-2.compute.amazonaws.com:9092
+prod.bootstrap.servers = sys.env("BOOTSTRAP_SERVER")
